tests/should_fail/impl_trait.coma
module M_impl_trait__qyi16477135280894462799__a [#"impl_trait.rs" 11 4 11 23] (* <() as MyTrait> *)
  let%span simpl_trait0 = "impl_trait.rs" 12 8 12 12
  let%span simpl_trait1 = "impl_trait.rs" 10 14 10 20
  
  use creusot.prelude.Any
  
  meta "compute_max_steps" 1000000
  
  let rec a'0[#"impl_trait.rs" 11 4 11 23] (self:()) (return'  (ret:bool))= (! bb0
    [ bb0 = s0 [ s0 =  [ &_0 <- [%#simpl_trait0] true ] s1 | s1 = return' {_0} ]  ]
    ) [ & _0 : bool = Any.any_l () ] 
    [ return' (result:bool)-> {[@expl:a ensures] [%#simpl_trait1] result} (! return' {result}) ]

end
module M_impl_trait__returns_iterator [#"impl_trait.rs" 16 0 16 41]
  let%span simpl_trait0 = "impl_trait.rs" 16 29 16 41
  
  use creusot.prelude.Any
  
  predicate inv'0 (_1 : ())
  
  axiom inv_axiom'0 [@rewrite] : forall x : () [inv'0 x] . inv'0 x = true
  
  meta "compute_max_steps" 1000000
  
  let rec returns_iterator'0[#"impl_trait.rs" 16 0 16 41] (return'  (ret:()))= (! bb0 [ bb0 = return' {_0} ] )
    [ & _0 : () = Any.any_l () ]
    
    [ return' (result:())-> {[@expl:returns_iterator result type invariant] [%#simpl_trait0] inv'0 result}
      (! return' {result}) ]

end
module M_impl_trait__main [#"impl_trait.rs" 21 0 21 13]
  let%span simpl_trait0 = "impl_trait.rs" 24 18 24 19
  let%span simpl_trait1 = "impl_trait.rs" 20 10 20 14
  let%span simpl_trait2 = "impl_trait.rs" 16 29 16 41
  let%span simpl_trait3 = "impl_trait.rs" 6 10 6 14
  let%span sinvariant4 = "../../creusot-contracts/src/invariant.rs" 25 8 25 18
  
  use creusot.prelude.Any
  
  type opaque0'0
  
  predicate inv'0 (_1 : opaque0'0)
  
  let rec returns_iterator'0 (return'  (ret:opaque0'0))= any
    [ return' (result:opaque0'0)-> {[%#simpl_trait2] inv'0 result} (! return' {result}) ]
  
  
  predicate invariant'0 (self : opaque0'0) =
    [%#sinvariant4] inv'0 self
  
  predicate inv'1 (_1 : opaque0'0)
  
  axiom inv_axiom'0 [@rewrite] : forall x : opaque0'0 [inv'1 x] . inv'1 x = invariant'0 x
  
  let rec a'0 (self:opaque0'0) (return'  (ret:bool))= {[@expl:a 'self' type invariant] [%#simpl_trait3] inv'1 self}
    any [ return' (result:bool)-> (! return' {result}) ] 
  
  meta "compute_max_steps" 1000000
  
  let rec main'0[#"impl_trait.rs" 21 0 21 13] (return'  (ret:()))= (! bb0
    [ bb0 = s0 [ s0 = returns_iterator'0 (fun (_ret':opaque0'0) ->  [ &_4 <- _ret' ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = a'0 {_4} (fun (_ret':bool) ->  [ &x <- _ret' ] s1) | s1 = bb2 ] 
    | bb2 = bb3
    | bb3 = s0 [ s0 = {[@expl:assertion] [%#simpl_trait0] x} s1 | s1 = return' {_0} ]  ]
    ) [ & _0 : () = Any.any_l () | & x : bool = Any.any_l () | & _4 : opaque0'0 = Any.any_l () ] 
    [ return' (result:())-> {[@expl:main ensures] [%#simpl_trait1] true} (! return' {result}) ]

end
module M_impl_trait__qyi16477135280894462799__a__refines [#"impl_trait.rs" 11 4 11 23] (* <() as MyTrait> *)
  let%span simpl_trait0 = "impl_trait.rs" 11 4 11 23
  
  goal refines : [%#simpl_trait0] true
end
